# Visual-Code-skeleton-for-Microchip-AVR-s-with-avr-gcc-14.2

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: temp_sensor.h
src/: main.c
